Closed Bug 1497027 Opened 6 years ago Closed 6 years ago

Crash properly after record/replay initialization failures

Categories

(Core Graveyard :: Web Replay, defect)

defect
Not set
normal

Tracking

(firefox64 fixed)

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: bhackett1024, Assigned: bhackett1024)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
If record/replay initialization fails (usually due to not being able to set up redirections) then we end up crashing shortly afterwards, but this happens before connecting to the middleman, which ends up hanging and not reporting anything useful.  The attached patch fixes things so that the child process lives long enough to report the error it encountered to the middleman.  The error is also printed to stderr immediately in case the fixes here regress again.
Attachment #9015098 - Flags: review?(nfroyd)
Comment on attachment 9015098 [details] [diff] [review]
patch

Review of attachment 9015098 [details] [diff] [review]:
-----------------------------------------------------------------

r=me with some kind of change like the below done.  Randomly checking gInitializationFailureMessage for what we're trying to do here is obscure at best.

::: toolkit/recordreplay/Lock.cpp
@@ +201,2 @@
>  
> +  if (!gInitializationFailureMessage) {

WDYT about commenting all changes in this patch similar to what was already done in Thread.cpp so that the intent behind these checks is more obvious?  (I considered suggesting some sort of function wrapper named to clarify the intent, but I couldn't come up with a good name...)
Attachment #9015098 - Flags: review?(nfroyd) → review+
Pushed by bhackett@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e36764125483
Crash properly after record/replay initialization failures, r=froydnj.
https://hg.mozilla.org/mozilla-central/rev/e36764125483
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: