Bug 1497027 - Crash properly after record/replay initialization failures, r=froydnj.